--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,14 @@
 
 /* Your CSS Code here. */
+.moviePic{
+	height: 500px;
+	width: 350px;
+	opacity: 0.8;
+}
+.movieDetail{
+    position: relative; 
+	top: 20px;
+	width: 20px;
+	text-align: right;
+	font-size: 20px;
+}
